# linear-rs

./: Cargo.toml  README.md
crates/linear/: Cargo.toml
crates/linear-cli/: Cargo.toml
crates/linear-cli/src/: main.rs
crates/linear-codegen/: Cargo.toml
crates/linear-codegen/src/: lib.rs
crates/linear-core/: Cargo.toml
crates/linear-core/src/: config.rs  lib.rs
crates/linear-core/src/auth/: browser.rs  credential_store.rs  error.rs  flow.rs  manual.rs  mod.rs  oauth.rs  orchestrator.rs  pkce.rs  session.rs  utils.rs
crates/linear-core/src/graphql/: client.rs  mod.rs
crates/linear-core/src/services/: cycles.rs  issues.rs  labels.rs  mod.rs  projects.rs
crates/linear-tui/: Cargo.toml
crates/linear-tui/src/: main.rs
crates/linear/src/: main.rs
crates/linear/src/tui/: app.rs  mod.rs  runner.rs
crates/linear/src/tui/view/: bottom.rs  filter_bar.rs  mod.rs  overlays.rs  palette.rs  sidebar.rs  util.rs  workspace.rs
docs/: architecture.md  cli.md
docs/research/: lazydocker.md  lazygit.md
docs/spec/: scope.md  screen-flows.md
xtask/: Cargo.toml
xtask/src/: main.rs
