[package]
name = "linear-core"
edition.workspace = true
license.workspace = true
version.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = "1.0"
base64 = { version = "0.22", default-features = false, features = ["std"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
directories = "5.0"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "1.0"
tokio = { version = "1.40", features = ["macros", "rt-multi-thread", "sync", "time"] }
url = "2.5"

[dev-dependencies]
httpmock = "0.7"
tempfile = "3.10"
