[package]
name = "linear-tui"
edition.workspace = true
license.workspace = true
version.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = "1.0"
linear-core = { path = "../linear-core" }
tokio = { version = "1.40", features = ["macros", "rt-multi-thread", "sync", "time"] }
crossterm = "0.27"
ratatui = "0.26"
serde_json = "1.0"
textwrap = "0.16"
