[package]
name = "linear"
edition.workspace = true
license.workspace = true
version.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = "1.0"
linear-core = { path = "../linear-core" }
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.40", features = ["macros", "rt-multi-thread", "io-std", "sync", "process"] }
url = "2.5"
serde_json = "1.0"
textwrap = "0.16"
pulldown-cmark = "0.10"
crossterm = "0.27"
ratatui = "0.26"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
